# image_processor

./: CMakeLists.txt  Colors.h  README.md  TArgParser.cpp  TArgParser.h  TArgsValidator.h  TColor.cpp  TColor.h  TDefaultArgValidator.h  TFilterInfo.h  TFilterManager.cpp  TFilterManager.h  TImage.cpp  TImage.h  aliases.h  main.cpp
filters/: TBlurFilter.cpp  TBlurFilter.h  TCropFilter.cpp  TCropFilter.h  TEdgeDetectionFilter.cpp  TEdgeDetectionFilter.h  TFilter.cpp  TFilter.h  TFunctionFilter.h  TGrayscaleFilter.h  TMatrixFilter.cpp  TMatrixFilter.h  TNegativeFilter.h  TSharpeningFilter.h  all_filters.h
headers/: TBMPHeader.h  TDIBHeader.h  THeader.h
interfaces/: ILoadable.h  IWritable.h
